objects/JBCXM__GSCockpitView__c.object
<CustomObject>
    <description>This object stores cockpit view data per user.</description>
    <fields>
        <fullName>JBCXM__AreaName__c</fullName>
        <label>AreaName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ColumnList__c</fullName>
        <description>List of fields for list view.</description>
        <label>Column List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>EntityType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Order__c</fullName>
        <description>Order and group related info.</description>
        <label>Order</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship Type</relationshipLabel>
        <relationshipName>CockpitViewRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <description>System name of the view.</description>
        <label>System Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who created the view.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSCockpitViewUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__WhereClause__c</fullName>
        <description>Where clause or Filter conditions to filter CTA.</description>
        <label>Where clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GSCockpitView</label>
    <nameField>
        <label>GS Cockpit View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSCockpitViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>